--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "dotenv": "^16.5.0",
     "embla-carousel-react": "^8.6.0",
     "firebase": "^11.9.1",
+    "framer-motion": "^11.3.11",
     "genkit": "^1.13.0",
     "lucide-react": "^0.475.0",
     "micromark": "^4.0.0",
@@ -53,7 +54,6 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
-    "react-markdown": "^9.0.1",
     "recharts": "^2.15.1",
     "remark-gfm": "^4.0.0",
     "slugify": "^1.6.6",
