Add this optional reminder step after successfully registration , but bo

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack -p 9002",
+    "dev": "next dev -p 9002",
     "genkit:dev": "genkit start -- tsx src/ai/dev.ts",
     "genkit:watch": "genkit start -- tsx --watch src/ai/dev.ts",
     "build": "next build",
@@ -48,6 +48,7 @@
     "firebase": "^11.9.1",
     "framer-motion": "^11.3.11",
     "genkit": "^1.13.0",
+    "libphonenumber-js": "^1.11.4",
     "lucide-react": "^0.475.0",
     "micromark": "^4.0.0",
     "next": "15.3.3",
@@ -57,6 +58,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "react-markdown": "^9.0.1",
+    "react-phone-number-input": "^3.4.3",
     "recharts": "^2.15.1",
     "remark-gfm": "^4.0.0",
     "slugify": "^1.6.6",
