--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "dotenv": "^16.5.0",
     "embla-carousel-react": "^8.6.0",
     "firebase": "^11.9.1",
+    "firebase-admin": "^12.2.0",
     "framer-motion": "^11.3.11",
     "genkit": "^1.13.0",
     "libphonenumber-js": "^1.11.4",
